[gd_scene load_steps=3 format=3 uid="uid://qv2ql1xvacj2"]

[ext_resource type="Script" path="res://scripts/bullet_spawner___TheThinLine.gd" id="1_5qbfn"]
[ext_resource type="PackedScene" uid="uid://ds46a0pqxukgo" path="res://scenes/Bullets/bullet_the_thin_line.tscn" id="2_jol6j"]

[node name="BULLET_SPAWNER - TheThinLine" type="Node2D"]
script = ExtResource("1_5qbfn")
TheThinLine = ExtResource("2_jol6j")
DamageDealing = 1.0
lifespan = 1.5
warningSignDuration = 1.0
randomizeSpawnOfBulletInACircle_RANGE = Array[float]([400.0, 1000.0])
delay = 0.3

[node name="spawningCooldown" type="Timer" parent="."]

[node name="warningBulletLifespan" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="spawningCooldown" to="." method="_on_spawning_cooldown_timeout"]
